[metadata]
name = vigiles-cli
version = 1.0.0-alpha
author = Timesys Corporation
author_email = vigiles@timesys.com
description = Timesys CVE database interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.url.goeshere
project_urls =
    Bug Tracker = https://github.url.goeshere/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Topic :: Utilities

[options]
package_dir =
    = src/lib
packages = find:
python_requires = >=3.6
install_requires =
    requests
scripts =
    src/bin/vigiles

[options.packages.find]
where = src/lib

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    numpydoc

