[metadata]
name = timesys
version = 1.3.0
author = Timesys Corporation
author_email = vigiles@timesys.com
description = Timesys Vigiles APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TimesysGit/vigiles-cli
project_urls =
    Bug Tracker = https://github.com/TimesysGit/vigiles-cli/issues
classifiers =
    Programming Lanauge :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX

[options]
package_dir =
    = src/lib
packages = find:
python_requires = >=3.7
install_requires =
    requests
scripts =
    src/bin/vigiles

[options.packages.find]
where = src/lib

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    numpydoc

